--- a/MobileApp/Packages/manifest.json
+++ b/MobileApp/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
+    "com.unity.adaptiveperformance": "5.1.0",
     "com.unity.adaptiveperformance.google.android": "1.3.1",
     "com.unity.adaptiveperformance.samsung.android": "5.0.0",
     "com.unity.addressables.android": "1.0.4",
